<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/_70sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_20ssp"
        />
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"

        android:paddingHorizontal="@dimen/_5ssp"

        android:background="@drawable/background_search"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        />
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"

        android:paddingHorizontal="@dimen/_5ssp"

        android:background="@drawable/background_search"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        />
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"

        android:text="@string/log_in"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        android:backgroundTint="@color/colorAccent"
        />
        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_10ssp"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextHint"/>
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"

            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"
            android:backgroundTint="@color/colorAccent"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>