<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutCreateRepo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:paddingBottom="@dimen/_8sdp"
    android:background="@drawable/background_dialog">
    <TextView
        android:id="@+id/textNewCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/new_collection"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/inputCollectionName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"

        android:paddingHorizontal="@dimen/_5sdp"

        android:background="@drawable/background_search"
        android:hint="@string/collection_name"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/textNewCollection"
        />
    <Button
        android:id="@+id/buttonCreateCollection"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_8sdp"

        android:text="@string/create_collection"
        android:textColor="@color/colorAccent"

        app:layout_constraintTop_toBottomOf="@+id/inputCollectionName"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_8sdp"

        android:text="@string/cancel"

        app:layout_constraintTop_toBottomOf="@+id/inputCollectionName"
        app:layout_constraintEnd_toStartOf="@+id/buttonCreateCollection"
        />

</androidx.constraintlayout.widget.ConstraintLayout>